# MCP

./: .coverage  .env.example  .gitignore  LICENSE  README.md  main_HW7_heb.txt  main_class7.txt  pyproject.toml  pytest.ini  requirements.txt  run_league.py  test_system.py
.claude/: settings.local.json
SHARED/config/: system.json
SHARED/config/agents/: agents_config.json
SHARED/config/defaults/: player.json  referee.json
SHARED/config/games/: games_registry.json
SHARED/config/leagues/: league_2025_even_odd.json
SHARED/league_sdk/: __init__.py  config_loader.py  config_models.py  logger.py  mcp_discovery.py  parallel.py  repositories.py
SHARED/logs/league/league_2025_even_odd/: league_manager.log.jsonl  test_component.log.jsonl
agents/league_manager/: __init__.py  handlers.py  main.py  requirements.txt  scheduler.py
agents/player_P01/: __init__.py  main.py
agents/player_P02/: __init__.py  main.py  requirements.txt  resilience.py
agents/player_P03/: __init__.py  handlers.py  main.py  strategy.py
agents/player_P04/: main.py
agents/referee_REF01/: __init__.py  handlers.py  main.py  requirements.txt
agents/referee_REF02/: __init__.py  game_logic.py  handlers.py  main.py
doc/message-examples/: README.md
doc/message-examples/config/: game_registry.json  league_config.json  system.json
doc/message-examples/data/: player_history.json  standings.json
doc/message-examples/errors/: game_error.json  invalid_move.json  league_error.json  timeout_error.json
doc/message-examples/game-flow/: choose_parity_call.json  choose_parity_response.json  game_invitation.json  game_join_ack.json  game_move_call.json  game_move_response.json  game_over.json  game_start.json  league_completed.json  match_result_report.json  move_request.json  round_completed.json  standings_update.json
doc/message-examples/league-flow/: round_announcement.json
doc/message-examples/logs/: log_entry.json  structured_log_entry.json
doc/message-examples/queries/: league_query.json
doc/message-examples/registration/: player_register_request.json  player_register_response.json  referee_register_request.json  referee_register_response.json
docs/: ARCHITECTURE.md  COST_ANALYSIS.md  MCP_PROTOCOL.md  PRD.md  PROJECT_DOCUMENTATION.md  PROMPTS.md  TESTING.md
notebooks/: analysis.ipynb
tests/: __init__.py  conftest.py  test_config_loader.py  test_config_models.py  test_envelope.py  test_game_logic.py  test_logger.py  test_parallel.py  test_player_handlers.py  test_referee_handlers.py  test_repositories.py  test_resilience.py  test_scheduler.py  test_strategy.py
